Publications is updated

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,22 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#todo: incorporate different collection types rather than a catch all publications, requires other changes to template\n",
     "publist = {\n",
-    "    \"proceeding\": {\n",
-    "        \"file\" : \"proceedings.bib\",\n",
-    "        \"venuekey\": \"booktitle\",\n",
-    "        \"venue-pretext\": \"In the proceedings of \",\n",
-    "        \"collection\" : {\"name\":\"publications\",\n",
-    "                        \"permalink\":\"/publication/\"}\n",
+    "    # \"proceeding\": {\n",
+    "    #     \"file\" : \"proceedings.bib\",\n",
+    "    #     \"venuekey\": \"booktitle\",\n",
+    "    #     \"venue-pretext\": \"In the proceedings of \",\n",
+    "    #     \"collection\" : {\"name\":\"publications\",\n",
+    "    #                     \"permalink\":\"/publication/\"}\n",
     "        \n",
-    "    },\n",
+    "    # },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"pubs.bib\",\n",
+    "        \"file\": \"MyPublications.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +79,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCESSFULLY PARSED Onishi2021: \" Theory of {Seebeck} ratchet in a noncentrosymmetric electron ... \"\n",
+      "SUCESSFULLY PARSED onishi_theory_2022: \" Theory of shift heat current and its application to electron ... \"\n",
+      "SUCESSFULLY PARSED onishi_effects_2022: \" Effects of relaxation on the photovoltaic effect and possibi ... \"\n",
+      "SUCESSFULLY PARSED mukasa_high-pressure_2021: \" High-pressure phase diagrams of {FeSe1}−{xTex}: correlation  ... \"\n",
+      "SUCESSFULLY PARSED ishida_pure_2022: \" Pure nematic quantum critical point accompanied by a superco ... \"\n",
+      "SUCESSFULLY PARSED gao_quantum_2023: \" Quantum metric nonlinear {Hall} effect in a topological anti ... \"\n"
+     ]
+    }
+   ],
    "source": [
     "for pubsource in publist:\n",
     "    parser = bibtex.Parser()\n",
@@ -215,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
