--- a/_posts/2023-12-17-blog-post-1.md
+++ b/_posts/2023-12-17-blog-post-1.md
@@ -1,7 +1,7 @@
 ---
-title: 'Blog Post number 1'
+title: 'First Blog Post'
 date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+permalink: /posts/2023/12/blog-post-1/
 tags:
   - cool posts
   - category1
