--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -92,6 +92,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -109,82 +122,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Talk 1 on Relevant Topic in Your Field</td>\n",
+       "      <td>High-efficiency quantum rectenna for millimete...</td>\n",
        "      <td>Talk</td>\n",
-       "      <td>talk-1</td>\n",
-       "      <td>UC San Francisco, Department of Testing</td>\n",
-       "      <td>2012-03-01</td>\n",
-       "      <td>San Francisco, California</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Tutorial 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Tutorial</td>\n",
-       "      <td>tutorial-1</td>\n",
-       "      <td>UC-Berkeley Institute for Testing Science</td>\n",
-       "      <td>2013-03-01</td>\n",
-       "      <td>Berkeley CA, USA</td>\n",
-       "      <td>http://exampleurl.com</td>\n",
-       "      <td>This is a description of your tutorial, note t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Talk 2 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
-       "      <td>talk-2</td>\n",
-       "      <td>London School of Testing</td>\n",
-       "      <td>2014-02-01</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>http://example2.com</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Conference Proceeding talk 3 on Relevant Topic...</td>\n",
-       "      <td>Conference proceedings talk</td>\n",
-       "      <td>talk-3</td>\n",
-       "      <td>Testing Institute of America 2014 Annual Confe...</td>\n",
-       "      <td>2014-03-01</td>\n",
-       "      <td>Los Angeles, CA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your conference proce...</td>\n",
+       "      <td>APS2023</td>\n",
+       "      <td>APS March Meeting 2023</td>\n",
+       "      <td>2023-03-10</td>\n",
+       "      <td>Las Vegas, Nevada</td>\n",
+       "      <td>https://meetings.aps.org/Meeting/MAR23/Session...</td>\n",
+       "      <td>Talk at APS March Meeting 2023. A related prep...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title  \\\n",
-       "0             Talk 1 on Relevant Topic in Your Field   \n",
-       "1         Tutorial 1 on Relevant Topic in Your Field   \n",
-       "2             Talk 2 on Relevant Topic in Your Field   \n",
-       "3  Conference Proceeding talk 3 on Relevant Topic...   \n",
+       "                                               title  type url_slug  \\\n",
+       "0  High-efficiency quantum rectenna for millimete...  Talk  APS2023   \n",
        "\n",
-       "                          type    url_slug  \\\n",
-       "0                         Talk      talk-1   \n",
-       "1                     Tutorial  tutorial-1   \n",
-       "2                         Talk      talk-2   \n",
-       "3  Conference proceedings talk      talk-3   \n",
+       "                    venue        date           location  \\\n",
+       "0  APS March Meeting 2023  2023-03-10  Las Vegas, Nevada   \n",
        "\n",
-       "                                               venue        date  \\\n",
-       "0            UC San Francisco, Department of Testing  2012-03-01   \n",
-       "1          UC-Berkeley Institute for Testing Science  2013-03-01   \n",
-       "2                           London School of Testing  2014-02-01   \n",
-       "3  Testing Institute of America 2014 Annual Confe...  2014-03-01   \n",
-       "\n",
-       "                    location               talk_url  \\\n",
-       "0  San Francisco, California                    NaN   \n",
-       "1           Berkeley CA, USA  http://exampleurl.com   \n",
-       "2                 London, UK    http://example2.com   \n",
-       "3            Los Angeles, CA                    NaN   \n",
+       "                                            talk_url  \\\n",
+       "0  https://meetings.aps.org/Meeting/MAR23/Session...   \n",
        "\n",
        "                                         description  \n",
-       "0  This is a description of your talk, which is a...  \n",
-       "1  This is a description of your tutorial, note t...  \n",
-       "2  This is a description of your talk, which is a...  \n",
-       "3  This is a description of your conference proce...  "
+       "0  Talk at APS March Meeting 2023. A related prep...  "
       ]
      },
      "execution_count": 3,
@@ -302,28 +264,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\r\n",
-      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls ../_talks"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
@@ -335,25 +275,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\r\n",
-      "collection: talks\r\n",
-      "type: \"Tutorial\"\r\n",
-      "permalink: /talks/2013-03-01-tutorial-1\r\n",
-      "venue: \"UC-Berkeley Institute for Testing Science\"\r\n",
-      "date: 2013-03-01\r\n",
-      "location: \"Berkeley CA, USA\"\r\n",
-      "---\r\n",
-      "\r\n",
-      "[More information here](http://exampleurl.com)\r\n",
-      "\r\n",
-      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n"
+      "2023-03-10-APS2023.md\n"
      ]
     }
    ],
    "source": [
-    "!cat ../_talks/2013-03-01-tutorial-1.md"
+    "!ls ../_talks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---\n",
+      "title: \"High-efficiency quantum rectenna for millimeter wave and terahertz technologies*\"\n",
+      "collection: talks\n",
+      "type: \"Talk\"\n",
+      "permalink: /talks/2023-03-10-APS2023\n",
+      "venue: \"APS March Meeting 2023\"\n",
+      "date: 2023-03-10\n",
+      "location: \"Las Vegas, Nevada\"\n",
+      "---\n",
+      "\n",
+      "[More information here](https://meetings.aps.org/Meeting/MAR23/Session/Y43.8)\n",
+      "\n",
+      "Talk at APS March Meeting 2023. A related preprint is at https://arxiv.org/abs/2211.17219\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat ../_talks/2023-03-10-APS2023.md"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
