First blog post

--- a/_posts/2023-12-17-blog-post-1.md
+++ b/_posts/2023-12-17-blog-post-1.md
@@ -3,18 +3,22 @@ title: 'First Blog Post'
 date: 2012-08-14
 permalink: /posts/2023/12/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - The first post
+  - English/Japanese
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+This is the first blog post, written in both English and Japanese.
 
-Headings are cool
+The first post
 ======
+Hello, I am Yugo Onishi, a PhD student at Physics department at MIT, working on condensed matter theory. I am not sure how often I will update the posts here, but maybe every time I will write a report for Funai Overseas Scholarship? The post may be in English or Japanese. The content may be related to physics, but not necessarily.
 
-You can have many headings
+初投稿
 ======
+大西由吾といいます。MITの物理学科でPhD学生としてCondensed Matter Theoryの研究をしています。どれくらい高頻度でこのブログを更新するかはわかりませんが、おそらく船井奨学金のレポートを書く度（半年に一回）になにか更新するかもしれません。更新は日本語かもしれませんし英語かもしれません。内容は物理のことかもしれないし全然物理に関係ないかもしれません。
 
-Aren't headings cool?
+
+Acknowledgements
 ------
+This homepage is made based on [academicpages.github.io](https://github.com/academicpages/academicpages.github.io). Thank you for the contributors of the repository.
+
