--- a/_posts/2023-12-17-blog-post-1.md
+++ b/_posts/2023-12-17-blog-post-1.md
@@ -3,7 +3,7 @@ title: 'First Blog Post'
 date: 2012-08-14
 permalink: /posts/2023/12/blog-post-1/
 tags:
-  - The first post
+  - non-Physics
   - English/Japanese
 ---
 
