Updated publication and talks.

--- a/markdown_generator/MyPublications.bib
+++ b/markdown_generator/MyPublications.bib
@@ -124,3 +124,20 @@ Publisher: Nature Publishing Group},
 	pages = {181--186},
 	file = {Full Text PDF:/home/yugo/Zotero/storage/AAA2JGBJ/Gao et al. - 2023 - Quantum metric nonlinear Hall effect in a topologi.pdf:application/pdf},
 }
+
+@article{onishi_fundamental_2024,
+	title = {Fundamental {Bound} on {Topological} {Gap}},
+	volume = {14},
+	url = {https://link.aps.org/doi/10.1103/PhysRevX.14.011052},
+	doi = {10.1103/PhysRevX.14.011052},
+	abstract = {We provide a universal tight bound on the energy gap of topological insulators by exploring relationships between topology, quantum geometry, and optical absorption. Applications of our theory to infrared absorption near topological band inversion, magnetic circular dichroism in Chern insulators, and topological gap in moiré materials are demonstrated.},
+	number = {1},
+	urldate = {2024-04-03},
+	journal = {Physical Review X},
+	author = {Onishi, Yugo and Fu, Liang},
+	month = mar,
+	year = {2024},
+	note = {Publisher: American Physical Society},
+	pages = {011052},
+	file = {APS Snapshot:/home/yugo/Zotero/storage/X83Q5CS6/PhysRevX.14.html:text/html;Full Text PDF:/home/yugo/Zotero/storage/9VZ6ANDL/Onishi and Fu - 2024 - Fundamental Bound on Topological Gap.pdf:application/pdf},
+}
