--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -93,7 +93,8 @@
       "SUCESSFULLY PARSED onishi_effects_2022: \" Effects of relaxation on the photovoltaic effect and possibi ... \"\n",
       "SUCESSFULLY PARSED mukasa_high-pressure_2021: \" High-pressure phase diagrams of {FeSe1}−{xTex}: correlation  ... \"\n",
       "SUCESSFULLY PARSED ishida_pure_2022: \" Pure nematic quantum critical point accompanied by a superco ... \"\n",
-      "SUCESSFULLY PARSED gao_quantum_2023: \" Quantum metric nonlinear {Hall} effect in a topological anti ... \"\n"
+      "SUCESSFULLY PARSED gao_quantum_2023: \" Quantum metric nonlinear {Hall} effect in a topological anti ... \"\n",
+      "SUCESSFULLY PARSED onishi_fundamental_2024: \" Fundamental {Bound} on {Topological} {Gap}  \"\n"
      ]
     }
    ],
