--- a/_talks/2023-03-10-APS2023.md
+++ b/_talks/2023-03-10-APS2023.md
@@ -1,5 +1,5 @@
 ---
-title: "High-efficiency quantum rectenna for millimeter wave and terahertz technologies*"
+title: "High-efficiency quantum rectenna for millimeter wave and terahertz technologies"
 collection: talks
 type: "Talk"
 permalink: /talks/2023-03-10-APS2023
