--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -57,10 +57,14 @@
      "output_type": "stream",
      "text": [
       "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
-      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
+      "High-efficiency quantum rectenna for millimeter wave and terahertz technologies\tTalk\tAPS2023\tAPS March Meeting 2023\t2023-03-10\tLas Vegas, Nevada\thttps://meetings.aps.org/Meeting/MAR23/Session/Y43.8\tTalk at APS March Meeting 2023. A related preprint is at https://arxiv.org/abs/2211.17219\n",
+      "Fundamental bound on topological gap\tTalk\tAPS2024\tAPS March Meeting 2024\t2024-03-08\tMinneapolis, Minnesota\thttps://meetings.aps.org/Meeting/MAR24/Session/Y17.12\tTalk at APS March Meeting 2024. A related publication is https://journals.aps.org/prx/abstract/10.1103/PhysRevX.14.011052\n",
+      "Quantum geometry, Optical property, and Energy gap\tSeminar\tAS2024Feb\tAcademia Sinica\t2024-02-22\tTaipei, Taiwan\t\tSeminar at Academia Sinica at Taipei, Taiwan. Hosted by Prof. Hsin Lin.\n",
+      "Quantum geometry, Optical property, and Energy gap\tSeminar\tNTU2024Feb\tNational Taiwan University\t2024-02-23\tTaipei, Taiwan\thttps://www.phys.ncts.ntu.edu.tw/en/act/TG3_1act/%5BNCTS-Phys-seminar%5D%C2%A0Quantum-geometry-Optical-property-and-Energy-gap-31732265\tSeminar at National Taiwan University at Taipei, Taiwan. Hosted by Prof. Chang-Tse Hsieh.\n",
+      "Quantum geometry, Optical property, and Energy gap\tSeminar\tNCKU2024Feb\tNational Cheng Kung University\t2024-02-27\tTainan, Taiwan\thttps://www.phys.ncku.edu.tw/en/colloquia-detail/544/\tSeminar at Cheng Kung University at Tainan, Taiwan. Hosted by Prof. Tay-Rong Chang.\n",
+      "Fundamental gap bound in insulators\tSeminar\tHarvardKids2024\tHarvard CMT Kids' Seminar\t2024-03-26\tCambridge, Massachusetts\thttp://cmt.harvard.edu/kidseminar.html\tHarvard CMT Kids’ Seminar. \n",
+      "Fundamental gap bound in insulators\tSeminar\tUCLA2024Apr\tGroup meeting of Narang group at UCLA\t2024-04-03\tOnline\t\tInformal seminar at Narang group at UCLA.\n",
+      "Quantum weight\tSeminar\tDelftU2024Apr\tSpeakers’ Corner Talk \t2024-04-05\tOnline\thttps://virtualscienceforum.org/speakers-corner/\tHosted by Virtual Science Forum. The recording is avaliable at https://virtualscienceforum.org/speakers-corner/\n"
      ]
     }
    ],
@@ -131,22 +135,137 @@
        "      <td>https://meetings.aps.org/Meeting/MAR23/Session...</td>\n",
        "      <td>Talk at APS March Meeting 2023. A related prep...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fundamental bound on topological gap</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>APS2024</td>\n",
+       "      <td>APS March Meeting 2024</td>\n",
+       "      <td>2024-03-08</td>\n",
+       "      <td>Minneapolis, Minnesota</td>\n",
+       "      <td>https://meetings.aps.org/Meeting/MAR24/Session...</td>\n",
+       "      <td>Talk at APS March Meeting 2024. A related publ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Quantum geometry, Optical property, and Energy...</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>AS2024Feb</td>\n",
+       "      <td>Academia Sinica</td>\n",
+       "      <td>2024-02-22</td>\n",
+       "      <td>Taipei, Taiwan</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Seminar at Academia Sinica at Taipei, Taiwan. ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Quantum geometry, Optical property, and Energy...</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>NTU2024Feb</td>\n",
+       "      <td>National Taiwan University</td>\n",
+       "      <td>2024-02-23</td>\n",
+       "      <td>Taipei, Taiwan</td>\n",
+       "      <td>https://www.phys.ncts.ntu.edu.tw/en/act/TG3_1a...</td>\n",
+       "      <td>Seminar at National Taiwan University at Taipe...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Quantum geometry, Optical property, and Energy...</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>NCKU2024Feb</td>\n",
+       "      <td>National Cheng Kung University</td>\n",
+       "      <td>2024-02-27</td>\n",
+       "      <td>Tainan, Taiwan</td>\n",
+       "      <td>https://www.phys.ncku.edu.tw/en/colloquia-deta...</td>\n",
+       "      <td>Seminar at Cheng Kung University at Tainan, Ta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Fundamental gap bound in insulators</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>HarvardKids2024</td>\n",
+       "      <td>Harvard CMT Kids' Seminar</td>\n",
+       "      <td>2024-03-26</td>\n",
+       "      <td>Cambridge, Massachusetts</td>\n",
+       "      <td>http://cmt.harvard.edu/kidseminar.html</td>\n",
+       "      <td>Harvard CMT Kids’ Seminar.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Fundamental gap bound in insulators</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>UCLA2024Apr</td>\n",
+       "      <td>Group meeting of Narang group at UCLA</td>\n",
+       "      <td>2024-04-03</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Informal seminar at Narang group at UCLA.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Quantum weight</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>DelftU2024Apr</td>\n",
+       "      <td>Speakers’ Corner Talk</td>\n",
+       "      <td>2024-04-05</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>https://virtualscienceforum.org/speakers-corner/</td>\n",
+       "      <td>Hosted by Virtual Science Forum. The recording...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title  type url_slug  \\\n",
-       "0  High-efficiency quantum rectenna for millimete...  Talk  APS2023   \n",
+       "                                               title     type  \\\n",
+       "0  High-efficiency quantum rectenna for millimete...     Talk   \n",
+       "1               Fundamental bound on topological gap     Talk   \n",
+       "2  Quantum geometry, Optical property, and Energy...  Seminar   \n",
+       "3  Quantum geometry, Optical property, and Energy...  Seminar   \n",
+       "4  Quantum geometry, Optical property, and Energy...  Seminar   \n",
+       "5                Fundamental gap bound in insulators  Seminar   \n",
+       "6                Fundamental gap bound in insulators  Seminar   \n",
+       "7                                     Quantum weight  Seminar   \n",
        "\n",
-       "                    venue        date           location  \\\n",
-       "0  APS March Meeting 2023  2023-03-10  Las Vegas, Nevada   \n",
+       "          url_slug                                  venue        date  \\\n",
+       "0          APS2023                 APS March Meeting 2023  2023-03-10   \n",
+       "1          APS2024                 APS March Meeting 2024  2024-03-08   \n",
+       "2        AS2024Feb                        Academia Sinica  2024-02-22   \n",
+       "3       NTU2024Feb             National Taiwan University  2024-02-23   \n",
+       "4      NCKU2024Feb         National Cheng Kung University  2024-02-27   \n",
+       "5  HarvardKids2024              Harvard CMT Kids' Seminar  2024-03-26   \n",
+       "6      UCLA2024Apr  Group meeting of Narang group at UCLA  2024-04-03   \n",
+       "7    DelftU2024Apr                 Speakers’ Corner Talk   2024-04-05   \n",
+       "\n",
+       "                   location  \\\n",
+       "0         Las Vegas, Nevada   \n",
+       "1    Minneapolis, Minnesota   \n",
+       "2            Taipei, Taiwan   \n",
+       "3            Taipei, Taiwan   \n",
+       "4            Tainan, Taiwan   \n",
+       "5  Cambridge, Massachusetts   \n",
+       "6                    Online   \n",
+       "7                    Online   \n",
        "\n",
        "                                            talk_url  \\\n",
        "0  https://meetings.aps.org/Meeting/MAR23/Session...   \n",
+       "1  https://meetings.aps.org/Meeting/MAR24/Session...   \n",
+       "2                                                NaN   \n",
+       "3  https://www.phys.ncts.ntu.edu.tw/en/act/TG3_1a...   \n",
+       "4  https://www.phys.ncku.edu.tw/en/colloquia-deta...   \n",
+       "5             http://cmt.harvard.edu/kidseminar.html   \n",
+       "6                                                NaN   \n",
+       "7   https://virtualscienceforum.org/speakers-corner/   \n",
        "\n",
        "                                         description  \n",
-       "0  Talk at APS March Meeting 2023. A related prep...  "
+       "0  Talk at APS March Meeting 2023. A related prep...  \n",
+       "1  Talk at APS March Meeting 2024. A related publ...  \n",
+       "2  Seminar at Academia Sinica at Taipei, Taiwan. ...  \n",
+       "3  Seminar at National Taiwan University at Taipe...  \n",
+       "4  Seminar at Cheng Kung University at Tainan, Ta...  \n",
+       "5                        Harvard CMT Kids’ Seminar.   \n",
+       "6          Informal seminar at Narang group at UCLA.  \n",
+       "7  Hosted by Virtual Science Forum. The recording...  "
       ]
      },
      "execution_count": 3,
@@ -264,6 +383,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-03-10-APS2023.md\t   2024-03-08-APS2024.md\n",
+      "2024-02-22-AS2024Feb.md    2024-03-26-HarvardKids2024.md\n",
+      "2024-02-23-NTU2024Feb.md   2024-04-03-UCLA2024Apr.md\n",
+      "2024-02-27-NCKU2024Feb.md  2024-04-05-DelftU2024Apr.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ../_talks"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
@@ -275,29 +418,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-03-10-APS2023.md\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls ../_talks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "---\n",
-      "title: \"High-efficiency quantum rectenna for millimeter wave and terahertz technologies*\"\n",
+      "title: \"High-efficiency quantum rectenna for millimeter wave and terahertz technologies\"\n",
       "collection: talks\n",
       "type: \"Talk\"\n",
       "permalink: /talks/2023-03-10-APS2023\n",
