slightly modify blog-post-1

--- a/_posts/2023-12-17-blog-post-1.md
+++ b/_posts/2023-12-17-blog-post-1.md
@@ -4,7 +4,8 @@ date: 2023-12-17
 permalink: /posts/2023/12/blog-post-1/
 tags:
   - non-Physics
-  - English/Japanese
+  - English
+  - Japanese
 ---
 
 This is the first blog post, written in both English and Japanese.
@@ -15,7 +16,7 @@ Hello, I am Yugo Onishi, a PhD student at Physics department at MIT, working on 
 
 初投稿
 ======
-大西由吾といいます。MITの物理学科でPhD学生としてCondensed Matter Theoryの研究をしています。どれくらい高頻度でこのブログを更新するかはわかりませんが、おそらく船井奨学金のレポートを書く度（半年に一回）になにか更新するかもしれません。更新は日本語かもしれませんし英語かもしれません。内容は物理のことかもしれないし全然物理に関係ないかもしれません。
+大西由吾といいます。MITの物理学科でPhD学生としてCondensed Matter Theory (CMT) の研究をしています。どれくらい高頻度でこのブログを更新するかはわかりませんが、おそらく船井奨学金のレポートを書く度（半年に一回）になにか更新するかもしれません。更新は日本語かもしれませんし英語かもしれません。内容は物理のことかもしれないし全然物理に関係ないかもしれません。
 
 
 Acknowledgements
