update the blog post

--- a/_posts/2024-07-03-blog-post-2.md
+++ b/_posts/2024-07-03-blog-post-2.md
@@ -12,7 +12,10 @@ tags:
   - 物理
 ---
 
+MIT Physics PhDプログラム、物性理論（CMT）専攻のQualを受けてきました。
+
 # MIT Physics 物性理論（CMT） Qual体験記
+
 # **目次**
 - [はじめに](#item-one)
 - [Qualの形式](#item-two)
