--- a/_posts/2024-07-04-blog-post-2.md
+++ b/_posts/2024-07-04-blog-post-2.md
@@ -90,17 +90,35 @@ $$\langle (\Delta x)^2 \rangle = \int \frac{dk}{2\pi} \frac{\hbar}{2m\omega_k}$$
 
 超伝導体の秩序変数$\psi(x)$はGinzburg-Landau理論によれば次のような運動エネルギーを持ちます：
 
-$$ \int dx \frac{1}{2m^*}|(-i\hbar \nabla-q\vec{A})\psi(x)|^2 $$
+$$\int dx \frac{1}{2m^*}|(-i\hbar \nabla-q\vec{A})\psi(x)|^2$$
 
-ここで $m^{*}, q$ は$\psi(x)$が運ぶ質量と電荷です。$\psi(x)$の実体はBCS理論によればクーパー対の凝縮したものなので、電子の質量$m_e$と電荷$e(<0)$に対して$m^{*}=2m_e, q=2e$で与えられます。系が基底状態にあるとすると、この運動エネルギーが最小の状態、すなわち0の状態が実現されます。$\psi(x)$の絶対値は超伝導体の秩序変数で、温度が十分に低く磁場が存在しない超伝導体内部ではほとんど変化しないとみなせるため、超伝導体$\psi(x)=\psi_0 e^{i\theta(x)}$は位相$\theta(x)$のみ空間依存するとして良いです。このとき、運動エネルギーが0になる条件は、
+ここで$m^{*}, q$は$\psi(x)$
+が運ぶ質量と電荷です。BCS理論によれば、
+$\psi(x)$
+の実体はクーパー対の凝縮したものなので、電子の質量$m_e$と電荷$e(<0)$に対して
+$m^{*}=2m_e, q=2e$
+で与えられます。系が基底状態にあるとすると、この運動エネルギーが最小の状態、すなわち0の状態が実現されます。
+$\psi(x)$
+の絶対値は超伝導体の秩序変数で、温度が十分に低く磁場が存在しない超伝導体内部ではほとんど変化しないとみなせるため、超伝導体
+$\psi(x)=\psi_0 e^{i\theta(x)}$
+は位相
+$\theta(x)$
+のみ空間依存するとして良いです。このとき、運動エネルギーが0になる条件は、
 
 $$ \hbar\nabla\theta = q\vec{A}$$
 
-で与えられます。これをさらにリング状で一周線積分すると、右辺はストークスの定理より超伝導体を貫く磁束$\Phi$を与えます。一方左辺$\nabla\theta$の積分は、$\psi(x)$の一価性により、$2\pi$の整数倍に量子化します。したがって、磁束$\Phi$は以下のように整数$n$を使って表せます。
+で与えられます。これをさらにリング状で一周線積分すると、右辺はストークスの定理より超伝導体を貫く磁束$\Phi$を与えます。一方左辺$\nabla\theta$の積分は、
+$\psi(x)$
+の一価性により、
+$2\pi$
+の整数倍に量子化します。したがって、磁束$\Phi$は以下のように整数$n$を使って表せます。
 
 $$\Phi = n\phi_0$$
 
-ただし$\phi_0=h/q=h/(2e)$は量子磁束です。したがって超伝導体を貫く磁束は量子磁束$\phi_0$の単位で量子化することがわかります。
+ただし
+$\phi_0=h/q=h/(2e)$
+は量子磁束です。したがって超伝導体を貫く磁束は量子磁束$\phi_0$
+の単位で量子化することがわかります。
 
 ### 問題4 : 3.に関連して、もし無理やり量子化していない中途半端な磁束を超伝導体に入れようとすると何が起こるか。二次元の場合に、半端な磁束を入れた場合の計算をせよ。(後段は私の前段への解答を踏まえてのものだったため、もう少し具体的だった。詳細は下記。)
 上の計算からわかるとおり、もし無理やり量子化していない中途半端な磁束を入れると、運動エネルギーをゼロにできなくなり、結果そのような状態を作るには非常に大きなエネルギーが必要になります。後段は、このエネルギーを二次元の場合に具体的に計算してみせよ、というものでした。
