--- a/_posts/2024-07-04-blog-post-2.md
+++ b/_posts/2024-07-04-blog-post-2.md
@@ -90,16 +90,16 @@ $$\langle (\Delta x)^2 \rangle = \int \frac{dk}{2\pi} \frac{\hbar}{2m\omega_k}$$
 
 超伝導体の秩序変数$\psi(x)$はGinzburg-Landau理論によれば次のような運動エネルギーを持ちます：
 
-$$\int dx \frac{1}{2m^*}|(-i\hbar \nabla-q\vec{A})\psi(x)|^2$$
+$$\int dx \frac{1}{2m}|(-i\hbar \nabla-q\vec{A})\psi(x)|^2$$
 
 ここで
-$m^*, q$
+$m, q$
 は
 $\psi(x)$
 が運ぶ質量と電荷です。BCS理論によれば、
 $\psi(x)$
 の実体はクーパー対の凝縮したものなので、電子の質量$m_e$と電荷$e(<0)$に対して
-$m^{*}=2m_e, q=2e$
+$m=2m_e, q=2e$
 で与えられます。系が基底状態にあるとすると、この運動エネルギーが最小の状態、すなわち0の状態が実現されます。
 $\psi(x)$
 の絶対値は超伝導体の秩序変数で、温度が十分に低く磁場が存在しない超伝導体内部ではほとんど変化しないとみなせるため、超伝導体
@@ -128,7 +128,7 @@ $\phi_0=h/q=h/(2e)$
 
 簡単のため、$\Phi$が0以上$\phi_0$未満である場合を考えましょう。その場合、$\psi(x)$の位相$\theta(x)$ はリングを一周したときに$2\pi \Phi/\phi_0$ だけ回転する必要があります。このような$\theta(x)$のうち、最も運動エネルギーを低くするような$\theta(x)$の分布は、リングの円周方向の角度を$\varphi$として$\theta(x)=(\Phi/\phi_0) \varphi$で与えられます。このときの運動エネルギーは
 
-$$ \int d^2x \frac{\hbar^2\psi_0^2 }{2m^*} (\frac{\Phi}{r\phi_0})^2 = \frac{\hbar^2\psi_0^2 }{2m^*} 2\pi (\frac{\Phi}{\phi_0})^2 \int_{r_0}^{R} dr \frac{1}{r} \propto \log (R/r_0)$$
+$$ \int d^2x \frac{\hbar^2\psi_0^2 }{2m} (\frac{\Phi}{r\phi_0})^2 = \frac{\hbar^2\psi_0^2 }{2m} 2\pi (\frac{\Phi}{\phi_0})^2 \int_{r_0}^{R} dr \frac{1}{r} \propto \log (R/r_0)$$
 
 ただし$R, r_0$はそれぞれリングの外径、内径です。したがって、系が十分に大きい場合、超伝導体の運動エネルギーは$\log(R/r_0)$で発散することがわかります。これはつまり、もし無理やり量子化していない磁束を超伝導体に入れようとすると、非常に大きなエネルギー（$\sim \log(R/r_0)$）を要することを意味します。
 
