polish blog post

--- a/_posts/2024-07-04-blog-post-2.md
+++ b/_posts/2024-07-04-blog-post-2.md
@@ -80,7 +80,7 @@ $$\langle (\Delta x)^2 \rangle = \int \frac{dk}{2\pi} \frac{\hbar}{2m\omega_k}$$
 
 さて、この積分の主な寄与は$\omega_k$が小さい時、すなわち$k=0$付近の線形分散からきます。この寄与は$\int dk 1/k \sim \log k$となって$k=0$付近で発散します。したがって、後段の答えは「**発散する**」になります。
 
-「発散する」という答えは果たして正しいのでしょうか。これは少し考えるとすぐに、非常に有名な事実、Mermin-Wagnerの定理そのものであることがわかります。Mermin-Wagnerの定理は「二次元以下の古典系では連続対称性は破れない」ことを主張します。これは二次元以下で連続対称性が破れたとすると、対応する南部-Goldstoneモードのギャップレス励起に由来するゆらぎが発散するため（2次元で$\log k_{IR}$, 1次元で$1/k_{IR}$のように発散する。ただし$k_{IR}\to 0$はIRカットオフ）、対応する秩序変数が有限になることと矛盾するからです。今回の例だと量子系の絶対零度ですが、大雑把にいってd-次元の量子系はd+1次元の古典系と同じような振る舞いを示します。したがって、今回の１次元量子系は２次元古典系に対するMermin-Wagnerの定理に対応してゆらぎが発散し、連続対称性の破れは起こりません。上記の計算は、まさにこのゆらぎの発散を計算したことになります。今回の問題設定ははじめから一次元で連続並進対称性が破れているという前提からスタートしましたが、Mermin-Wagnerの定理によればそもそもそんなものはないという話になります。
+「発散する」という答えは果たして物理的に何を意味するのでしょうか。これは少し考えるとすぐに、非常に有名な事実、Mermin-Wagnerの定理そのものであることがわかります。Mermin-Wagnerの定理は「二次元以下の古典系では連続対称性は破れない」ことを主張します。これは二次元以下で連続対称性が破れたとすると、対応する南部-Goldstoneモードのギャップレス励起に由来するゆらぎが発散するため（2次元で$\log k_{IR}$, 1次元で$1/k_{IR}$のように発散する。ただし$k_{IR}\to 0$はIRカットオフ）、対応する秩序変数が有限になることと矛盾するからです。今回の例だと量子系の絶対零度ですが、大雑把にいってd-次元の量子系はd+1次元の古典系と同じような振る舞いを示します。したがって、今回の１次元量子系は２次元古典系に対するMermin-Wagnerの定理に対応してゆらぎが発散し、連続対称性の破れは起こりません。上記の計算は、まさにこのゆらぎの発散を計算したことになります。今回の問題設定ははじめから一次元で連続並進対称性が破れているという前提からスタートしましたが、Mermin-Wagnerの定理によればそもそもそんなものはないという話になります。
 
 したがって、Mermin-Wagnerの定理を知っていれば、後段の答えが発散することは計算せずとも直ちにわかる結果だったわけです。
 
