--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,12 @@
       "Quantum geometry, Optical property, and Energy gap\tSeminar\tNCKU2024Feb\tNational Cheng Kung University\t2024-02-27\tTainan, Taiwan\thttps://www.phys.ncku.edu.tw/en/colloquia-detail/544/\tSeminar at Cheng Kung University at Tainan, Taiwan. Hosted by Prof. Tay-Rong Chang.\n",
       "Fundamental gap bound in insulators\tSeminar\tHarvardKids2024\tHarvard CMT Kids' Seminar\t2024-03-26\tCambridge, Massachusetts\thttp://cmt.harvard.edu/kidseminar.html\tHarvard CMT Kids’ Seminar. \n",
       "Fundamental gap bound in insulators\tSeminar\tUCLA2024Apr\tGroup meeting of Narang group at UCLA\t2024-04-03\tOnline\t\tInformal seminar at Narang group at UCLA.\n",
-      "Quantum weight\tSeminar\tDelftU2024Apr\tSpeakers’ Corner Talk \t2024-04-05\tOnline\thttps://virtualscienceforum.org/speakers-corner/\tHosted by Virtual Science Forum. The recording is avaliable at https://virtualscienceforum.org/speakers-corner/\n"
+      "Quantum weight\tSeminar\tDelftU2024Apr\tSpeakers’ Corner Talk \t2024-04-05\tOnline\thttps://virtualscienceforum.org/speakers-corner/\tHosted by Virtual Science Forum. The recording is avaliable at https://virtualscienceforum.org/speakers-corner/\n",
+      "Fundamental bound on topological gap\tSeminar\tETH2024Apr\tETH Zurich\t2024-04-10\tETH Zurich, Switzerland\thttps://www.lifescience.net/events/69335/yugo-onishi-mit-usa-fundamental-bound-on-topolocia/\tSeminar at ETH Zurich. Hosted by Prof. Ataç İmamoğlu.\n",
+      "Fundamental gap bound in insulators\tTalk\tNQCM2024May\tNQCM2024\t2024-05-25\tUniversity of Tokyo, Japan\thttps://sites.google.com/view/nqcm2024/home?authuser=0\tInvited talk for a workshop at University of Tokyo. \n",
+      "Fundamental gap bound in insulators\tSeminar\tFujimoto2024May\tSeminar at Fujimoto group at Osaka University\t2024-05-28\tOsaka University, Japan\thttp://www.fujimotolab.mp.es.osaka-u.ac.jp/pastseminar2024.html\tSeminar at Fujimoto group at Osaka University. \n",
+      "Fundamental bound on topological gap\tTalk\tEmergent2024May\t創発現象のフロンティアworkshop at Kyoto University\t2024-05-29\tKyoto University, Japan\thttps://sites.google.com/view/emergent2024\tContributed talk at 創発現象のフロンティア workshop\n",
+      "Universal bound in topological phase\tTalk\tQuantumDesigner2024Jul\tQuantum Designer Physics 2024\t2024-07-18\tSan Sebastian, Spain\thttps://qdp2024.dipc.org/speakers/program\tContributed talk at Quantum Designer Physics 2024\n"
      ]
     }
    ],
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -212,63 +217,143 @@
        "      <td>https://virtualscienceforum.org/speakers-corner/</td>\n",
        "      <td>Hosted by Virtual Science Forum. The recording...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Fundamental bound on topological gap</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>ETH2024Apr</td>\n",
+       "      <td>ETH Zurich</td>\n",
+       "      <td>2024-04-10</td>\n",
+       "      <td>ETH Zurich, Switzerland</td>\n",
+       "      <td>https://www.lifescience.net/events/69335/yugo-...</td>\n",
+       "      <td>Seminar at ETH Zurich. Hosted by Prof. Ataç İm...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Fundamental gap bound in insulators</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>NQCM2024May</td>\n",
+       "      <td>NQCM2024</td>\n",
+       "      <td>2024-05-25</td>\n",
+       "      <td>University of Tokyo, Japan</td>\n",
+       "      <td>https://sites.google.com/view/nqcm2024/home?au...</td>\n",
+       "      <td>Invited talk for a workshop at University of T...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Fundamental gap bound in insulators</td>\n",
+       "      <td>Seminar</td>\n",
+       "      <td>Fujimoto2024May</td>\n",
+       "      <td>Seminar at Fujimoto group at Osaka University</td>\n",
+       "      <td>2024-05-28</td>\n",
+       "      <td>Osaka University, Japan</td>\n",
+       "      <td>http://www.fujimotolab.mp.es.osaka-u.ac.jp/pas...</td>\n",
+       "      <td>Seminar at Fujimoto group at Osaka University.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Fundamental bound on topological gap</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>Emergent2024May</td>\n",
+       "      <td>創発現象のフロンティアworkshop at Kyoto University</td>\n",
+       "      <td>2024-05-29</td>\n",
+       "      <td>Kyoto University, Japan</td>\n",
+       "      <td>https://sites.google.com/view/emergent2024</td>\n",
+       "      <td>Contributed talk at 創発現象のフロンティア workshop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Universal bound in topological phase</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>QuantumDesigner2024Jul</td>\n",
+       "      <td>Quantum Designer Physics 2024</td>\n",
+       "      <td>2024-07-18</td>\n",
+       "      <td>San Sebastian, Spain</td>\n",
+       "      <td>https://qdp2024.dipc.org/speakers/program</td>\n",
+       "      <td>Contributed talk at Quantum Designer Physics 2024</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                               title     type  \\\n",
-       "0  High-efficiency quantum rectenna for millimete...     Talk   \n",
-       "1               Fundamental bound on topological gap     Talk   \n",
-       "2  Quantum geometry, Optical property, and Energy...  Seminar   \n",
-       "3  Quantum geometry, Optical property, and Energy...  Seminar   \n",
-       "4  Quantum geometry, Optical property, and Energy...  Seminar   \n",
-       "5                Fundamental gap bound in insulators  Seminar   \n",
-       "6                Fundamental gap bound in insulators  Seminar   \n",
-       "7                                     Quantum weight  Seminar   \n",
+       "                                                title     type  \\\n",
+       "0   High-efficiency quantum rectenna for millimete...     Talk   \n",
+       "1                Fundamental bound on topological gap     Talk   \n",
+       "2   Quantum geometry, Optical property, and Energy...  Seminar   \n",
+       "3   Quantum geometry, Optical property, and Energy...  Seminar   \n",
+       "4   Quantum geometry, Optical property, and Energy...  Seminar   \n",
+       "5                 Fundamental gap bound in insulators  Seminar   \n",
+       "6                 Fundamental gap bound in insulators  Seminar   \n",
+       "7                                      Quantum weight  Seminar   \n",
+       "8                Fundamental bound on topological gap  Seminar   \n",
+       "9                 Fundamental gap bound in insulators     Talk   \n",
+       "10                Fundamental gap bound in insulators  Seminar   \n",
+       "11               Fundamental bound on topological gap     Talk   \n",
+       "12               Universal bound in topological phase     Talk   \n",
        "\n",
-       "          url_slug                                  venue        date  \\\n",
-       "0          APS2023                 APS March Meeting 2023  2023-03-10   \n",
-       "1          APS2024                 APS March Meeting 2024  2024-03-08   \n",
-       "2        AS2024Feb                        Academia Sinica  2024-02-22   \n",
-       "3       NTU2024Feb             National Taiwan University  2024-02-23   \n",
-       "4      NCKU2024Feb         National Cheng Kung University  2024-02-27   \n",
-       "5  HarvardKids2024              Harvard CMT Kids' Seminar  2024-03-26   \n",
-       "6      UCLA2024Apr  Group meeting of Narang group at UCLA  2024-04-03   \n",
-       "7    DelftU2024Apr                 Speakers’ Corner Talk   2024-04-05   \n",
+       "                  url_slug                                          venue  \\\n",
+       "0                  APS2023                         APS March Meeting 2023   \n",
+       "1                  APS2024                         APS March Meeting 2024   \n",
+       "2                AS2024Feb                                Academia Sinica   \n",
+       "3               NTU2024Feb                     National Taiwan University   \n",
+       "4              NCKU2024Feb                 National Cheng Kung University   \n",
+       "5          HarvardKids2024                      Harvard CMT Kids' Seminar   \n",
+       "6              UCLA2024Apr          Group meeting of Narang group at UCLA   \n",
+       "7            DelftU2024Apr                         Speakers’ Corner Talk    \n",
+       "8               ETH2024Apr                                     ETH Zurich   \n",
+       "9              NQCM2024May                                       NQCM2024   \n",
+       "10         Fujimoto2024May  Seminar at Fujimoto group at Osaka University   \n",
+       "11         Emergent2024May        創発現象のフロンティアworkshop at Kyoto University   \n",
+       "12  QuantumDesigner2024Jul                  Quantum Designer Physics 2024   \n",
        "\n",
-       "                   location  \\\n",
-       "0         Las Vegas, Nevada   \n",
-       "1    Minneapolis, Minnesota   \n",
-       "2            Taipei, Taiwan   \n",
-       "3            Taipei, Taiwan   \n",
-       "4            Tainan, Taiwan   \n",
-       "5  Cambridge, Massachusetts   \n",
-       "6                    Online   \n",
-       "7                    Online   \n",
+       "          date                    location  \\\n",
+       "0   2023-03-10           Las Vegas, Nevada   \n",
+       "1   2024-03-08      Minneapolis, Minnesota   \n",
+       "2   2024-02-22              Taipei, Taiwan   \n",
+       "3   2024-02-23              Taipei, Taiwan   \n",
+       "4   2024-02-27              Tainan, Taiwan   \n",
+       "5   2024-03-26    Cambridge, Massachusetts   \n",
+       "6   2024-04-03                      Online   \n",
+       "7   2024-04-05                      Online   \n",
+       "8   2024-04-10     ETH Zurich, Switzerland   \n",
+       "9   2024-05-25  University of Tokyo, Japan   \n",
+       "10  2024-05-28     Osaka University, Japan   \n",
+       "11  2024-05-29     Kyoto University, Japan   \n",
+       "12  2024-07-18        San Sebastian, Spain   \n",
        "\n",
-       "                                            talk_url  \\\n",
-       "0  https://meetings.aps.org/Meeting/MAR23/Session...   \n",
-       "1  https://meetings.aps.org/Meeting/MAR24/Session...   \n",
-       "2                                                NaN   \n",
-       "3  https://www.phys.ncts.ntu.edu.tw/en/act/TG3_1a...   \n",
-       "4  https://www.phys.ncku.edu.tw/en/colloquia-deta...   \n",
-       "5             http://cmt.harvard.edu/kidseminar.html   \n",
-       "6                                                NaN   \n",
-       "7   https://virtualscienceforum.org/speakers-corner/   \n",
+       "                                             talk_url  \\\n",
+       "0   https://meetings.aps.org/Meeting/MAR23/Session...   \n",
+       "1   https://meetings.aps.org/Meeting/MAR24/Session...   \n",
+       "2                                                 NaN   \n",
+       "3   https://www.phys.ncts.ntu.edu.tw/en/act/TG3_1a...   \n",
+       "4   https://www.phys.ncku.edu.tw/en/colloquia-deta...   \n",
+       "5              http://cmt.harvard.edu/kidseminar.html   \n",
+       "6                                                 NaN   \n",
+       "7    https://virtualscienceforum.org/speakers-corner/   \n",
+       "8   https://www.lifescience.net/events/69335/yugo-...   \n",
+       "9   https://sites.google.com/view/nqcm2024/home?au...   \n",
+       "10  http://www.fujimotolab.mp.es.osaka-u.ac.jp/pas...   \n",
+       "11         https://sites.google.com/view/emergent2024   \n",
+       "12          https://qdp2024.dipc.org/speakers/program   \n",
        "\n",
-       "                                         description  \n",
-       "0  Talk at APS March Meeting 2023. A related prep...  \n",
-       "1  Talk at APS March Meeting 2024. A related publ...  \n",
-       "2  Seminar at Academia Sinica at Taipei, Taiwan. ...  \n",
-       "3  Seminar at National Taiwan University at Taipe...  \n",
-       "4  Seminar at Cheng Kung University at Tainan, Ta...  \n",
-       "5                        Harvard CMT Kids’ Seminar.   \n",
-       "6          Informal seminar at Narang group at UCLA.  \n",
-       "7  Hosted by Virtual Science Forum. The recording...  "
+       "                                          description  \n",
+       "0   Talk at APS March Meeting 2023. A related prep...  \n",
+       "1   Talk at APS March Meeting 2024. A related publ...  \n",
+       "2   Seminar at Academia Sinica at Taipei, Taiwan. ...  \n",
+       "3   Seminar at National Taiwan University at Taipe...  \n",
+       "4   Seminar at Cheng Kung University at Tainan, Ta...  \n",
+       "5                         Harvard CMT Kids’ Seminar.   \n",
+       "6           Informal seminar at Narang group at UCLA.  \n",
+       "7   Hosted by Virtual Science Forum. The recording...  \n",
+       "8   Seminar at ETH Zurich. Hosted by Prof. Ataç İm...  \n",
+       "9   Invited talk for a workshop at University of T...  \n",
+       "10    Seminar at Fujimoto group at Osaka University.   \n",
+       "11           Contributed talk at 創発現象のフロンティア workshop  \n",
+       "12  Contributed talk at Quantum Designer Physics 2024  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -321,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -383,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -394,10 +479,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-03-10-APS2023.md\t   2024-03-08-APS2024.md\n",
-      "2024-02-22-AS2024Feb.md    2024-03-26-HarvardKids2024.md\n",
-      "2024-02-23-NTU2024Feb.md   2024-04-03-UCLA2024Apr.md\n",
-      "2024-02-27-NCKU2024Feb.md  2024-04-05-DelftU2024Apr.md\n"
+      "2023-03-10-APS2023.md\t       2024-04-05-DelftU2024Apr.md\n",
+      "2024-02-22-AS2024Feb.md        2024-04-10-ETH2024Apr.md\n",
+      "2024-02-23-NTU2024Feb.md       2024-05-25-NQCM2024May.md\n",
+      "2024-02-27-NCKU2024Feb.md      2024-05-28-Fujimoto2024May.md\n",
+      "2024-03-08-APS2024.md\t       2024-05-29-Emergent2024May.md\n",
+      "2024-03-26-HarvardKids2024.md  2024-07-18-QuantumDesigner2024Jul.md\n",
+      "2024-04-03-UCLA2024Apr.md\n"
      ]
     }
    ],
@@ -407,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -462,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
