--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        \n",
     "    # },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"MyPublications.bib\",\n",
+    "        \"file\": \"MyPublications_20240922.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -88,13 +88,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SUCESSFULLY PARSED Mukasa2021: \" High-pressure phase diagrams of {FeSe1}−{xTex}: correlation  ... \"\n",
       "SUCESSFULLY PARSED Onishi2021: \" Theory of {Seebeck} ratchet in a noncentrosymmetric electron ... \"\n",
+      "SUCESSFULLY PARSED gao_quantum_2023: \" Quantum metric nonlinear {Hall} effect in a topological anti ... \"\n",
       "SUCESSFULLY PARSED onishi_theory_2022: \" Theory of shift heat current and its application to electron ... \"\n",
       "SUCESSFULLY PARSED onishi_effects_2022: \" Effects of relaxation on the photovoltaic effect and possibi ... \"\n",
-      "SUCESSFULLY PARSED mukasa_high-pressure_2021: \" High-pressure phase diagrams of {FeSe1}−{xTex}: correlation  ... \"\n",
       "SUCESSFULLY PARSED ishida_pure_2022: \" Pure nematic quantum critical point accompanied by a superco ... \"\n",
-      "SUCESSFULLY PARSED gao_quantum_2023: \" Quantum metric nonlinear {Hall} effect in a topological anti ... \"\n",
-      "SUCESSFULLY PARSED onishi_fundamental_2024: \" Fundamental {Bound} on {Topological} {Gap}  \"\n"
+      "SUCESSFULLY PARSED onishi_fundamental_2024: \" Fundamental {Bound} on {Topological} {Gap}  \"\n",
+      "SUCESSFULLY PARSED onishi_high-efficiency_2024: \" High-efficiency energy harvesting based on a nonlinear {Hall ... \"\n"
      ]
     }
    ],
@@ -209,7 +210,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with '.venv (Python 3.12.3)' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/home/yugo/Documents/myHomePage/YugoOnishi.github.io/.venv/bin/python -m pip install ipykernel -U --force-reinstall'"
+     ]
+    }
+   ],
    "source": []
   }
  ],
@@ -229,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
