--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        \n",
     "    # },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"MyPublications_20240922.bib\",\n",
+    "        \"file\": \"MyPublications_20241211.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -95,7 +95,11 @@
       "SUCESSFULLY PARSED onishi_effects_2022: \" Effects of relaxation on the photovoltaic effect and possibi ... \"\n",
       "SUCESSFULLY PARSED ishida_pure_2022: \" Pure nematic quantum critical point accompanied by a superco ... \"\n",
       "SUCESSFULLY PARSED onishi_fundamental_2024: \" Fundamental {Bound} on {Topological} {Gap}  \"\n",
-      "SUCESSFULLY PARSED onishi_high-efficiency_2024: \" High-efficiency energy harvesting based on a nonlinear {Hall ... \"\n"
+      "SUCESSFULLY PARSED onishi_high-efficiency_2024: \" High-efficiency energy harvesting based on a nonlinear {Hall ... \"\n",
+      "SUCESSFULLY PARSED gao_antiferromagnetic_2024: \" An antiferromagnetic diode effect in even-layered {MnBi2Te4}  \"\n",
+      "SUCESSFULLY PARSED min_colossal_2024: \" Colossal room-temperature non-reciprocal {Hall} effect  \"\n",
+      "SUCESSFULLY PARSED onishi_topological_2024: \" Topological {Bound} on the {Structure} {Factor}  \"\n",
+      "SUCESSFULLY PARSED onishi_universal_2024: \" Universal relation between energy gap and dielectric constan ... \"\n"
      ]
     }
    ],
