--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
     "        \n",
     "    # },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"MyPublications_20241211.bib\",\n",
+    "        \"file\": \"MyPublications_20240306.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "scrolled": false
    },
@@ -99,7 +99,9 @@
       "SUCESSFULLY PARSED gao_antiferromagnetic_2024: \" An antiferromagnetic diode effect in even-layered {MnBi2Te4}  \"\n",
       "SUCESSFULLY PARSED min_colossal_2024: \" Colossal room-temperature non-reciprocal {Hall} effect  \"\n",
       "SUCESSFULLY PARSED onishi_topological_2024: \" Topological {Bound} on the {Structure} {Factor}  \"\n",
-      "SUCESSFULLY PARSED onishi_universal_2024: \" Universal relation between energy gap and dielectric constan ... \"\n"
+      "SUCESSFULLY PARSED onishi_universal_2024: \" Universal relation between energy gap and dielectric constan ... \"\n",
+      "SUCESSFULLY PARSED ghosh_probing_2024: \" Probing quantum geometry through optical conductivity and ma ... \"\n",
+      "SUCESSFULLY PARSED onishi_theory_2025: \" Theory of {Thermopolarization} {Effect}  \"\n"
      ]
     }
    ],
@@ -214,24 +216,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with '.venv (Python 3.12.3)' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/home/yugo/Documents/myHomePage/YugoOnishi.github.io/.venv/bin/python -m pip install ipykernel -U --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
