updated about publication of quantum weight and geometric bound papers, and preprint of emergent gravity. Also added KITP fellow

--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,8 @@
     "        \n",
     "    # },\n",
     "    \"journal\":{\n",
-    "        \"file\": \"MyPublications_20240306.bib\",\n",
+    "        # \"file\": \"MyPublications_20240306.bib\",\n",
+    "        \"file\": \"MyPublications_20250815.bib\",\n",
     "        \"venuekey\" : \"journal\",\n",
     "        \"venue-pretext\" : \"\",\n",
     "        \"collection\" : {\"name\":\"publications\",\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -101,7 +102,9 @@
       "SUCESSFULLY PARSED onishi_topological_2024: \" Topological {Bound} on the {Structure} {Factor}  \"\n",
       "SUCESSFULLY PARSED onishi_universal_2024: \" Universal relation between energy gap and dielectric constan ... \"\n",
       "SUCESSFULLY PARSED ghosh_probing_2024: \" Probing quantum geometry through optical conductivity and ma ... \"\n",
-      "SUCESSFULLY PARSED onishi_theory_2025: \" Theory of {Thermopolarization} {Effect}  \"\n"
+      "SUCESSFULLY PARSED onishi_theory_2025: \" Theory of {Thermopolarization} {Effect}  \"\n",
+      "SUCESSFULLY PARSED onishi_quantum_2025: \" Quantum weight: {A} fundamental property of quantum many-bod ... \"\n",
+      "SUCESSFULLY PARSED onishi_geometric_2025: \" Geometric bound on the structure factor and a harmonic condi ... \"\n"
      ]
     }
    ],
